fix(project): live tag contrast ratio

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $gray-dark: #363636 !default;
 $gray-darker: #292929 !default;
 $gray-alternate: #edeff3 !default;
 
-$red: #f42957 !default;
+$red: #ce153f !default;
 $blue: #2b3b57 !default;
 $green: #393 !default;
 
